# claw

./: .dockerignore  CODE_REVIEW.md  Cargo.toml  Dockerfile  OPENCLAW_RESEARCH.md  README.md  STATUS.md  TODO.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
claw-bin/: Cargo.toml
claw-bin/src/: main.rs
config/: claw.toml
crates/claw-autonomy/: Cargo.toml
crates/claw-autonomy/src/: approval.rs  budget.rs  guardrail.rs  level.rs  lib.rs  planner.rs
crates/claw-autonomy/tests/: autonomy_tests.rs
crates/claw-channels/: Cargo.toml
crates/claw-channels/src/: adapter.rs  discord.rs  lib.rs  signal.rs  slack.rs  telegram.rs  webchat.rs  whatsapp.rs
crates/claw-cli/: Cargo.toml
crates/claw-cli/src/: commands.rs  lib.rs
crates/claw-cli/src/commands/: channels.rs  chat.rs  mesh.rs  mod.rs  plugins.rs  setup.rs  skills.rs  start.rs  update.rs
crates/claw-config/: Cargo.toml
crates/claw-config/src/: lib.rs  loader.rs  schema.rs
crates/claw-config/tests/: config_tests.rs
crates/claw-core/: Cargo.toml
crates/claw-core/src/: error.rs  event.rs  lib.rs  message.rs  tool.rs  types.rs
crates/claw-core/tests/: core_tests.rs
crates/claw-device/: Cargo.toml
crates/claw-device/src/: android.rs  browser.rs  ios.rs  lib.rs  tools.rs
crates/claw-llm/: Cargo.toml
crates/claw-llm/src/: anthropic.rs  embedding.rs  lib.rs  local.rs  mock.rs  openai.rs  provider.rs  router.rs
crates/claw-llm/tests/: router_tests.rs
crates/claw-memory/: Cargo.toml
crates/claw-memory/src/: episodic.rs  lib.rs  semantic.rs  store.rs  working.rs
crates/claw-memory/tests/: memory_tests.rs
crates/claw-mesh/: Cargo.toml
crates/claw-mesh/src/: discovery.rs  lib.rs  node.rs  protocol.rs  transport.rs
crates/claw-plugin/: Cargo.toml
crates/claw-plugin/src/: host.rs  lib.rs  manifest.rs  registry.rs
crates/claw-runtime/: Cargo.toml
crates/claw-runtime/src/: agent.rs  agent_loop.rs  channel_helpers.rs  learning.rs  lib.rs  query.rs  scheduler.rs  session.rs  sub_agent.rs  terminal.rs  tool_dispatch.rs  tools.rs
crates/claw-server/: Cargo.toml
crates/claw-server/src/: hub.rs  lib.rs  metrics.rs  ratelimit.rs
crates/claw-server/tests/: api_integration.rs
crates/claw-skills/: Cargo.toml
crates/claw-skills/src/: definition.rs  lib.rs  registry.rs
examples/: claw.toml
examples/plugins/: README.md
examples/plugins/calculator/: Cargo.toml  plugin.toml
examples/plugins/calculator/src/: lib.rs
examples/plugins/hello-world/: Cargo.toml  plugin.toml
examples/plugins/hello-world/src/: lib.rs
examples/plugins/text-utils/: Cargo.toml  plugin.toml
examples/plugins/text-utils/src/: lib.rs
scripts/: claw.service  cross-build.sh  install.sh
skills/1password/: SKILL.md
skills/coding/: SKILL.md
skills/docker/: SKILL.md
skills/github/: SKILL.md
skills/plesk-server/: SKILL.md
skills/server-management/: SKILL.md
skills/system-admin/: SKILL.md
skills/web-research/: SKILL.md
web/: app.js  index.html  style.css
