[workspace]
resolver = "2"
members = [
    "crates/claw-core",
    "crates/claw-config",
    "crates/claw-memory",
    "crates/claw-llm",
    "crates/claw-autonomy",
    "crates/claw-plugin",
    "crates/claw-skills",
    "crates/claw-channels",
    "crates/claw-mesh",
    "crates/claw-runtime",
    "crates/claw-server",
    "crates/claw-device",
    "crates/claw-cli",
    "claw-bin",
]
exclude = [
    "examples/plugins/hello-world",
    "examples/plugins/calculator",
    "examples/plugins/text-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Claw Contributors"]
repository = "https://github.com/props-nothing/claw"
description = "Universal autonomous AI agent runtime"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
toml_edit = "0.25"

# Error handling
thiserror = "2"
anyhow = "1"
color-eyre = "0.6"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP & networking
reqwest = { version = "0.13", features = ["json", "stream", "multipart", "rustls", "query"], default-features = false }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
hyper = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.38", features = ["bundled", "vtab"] }
deadpool = "0.12"

# WASM plugin host
wasmtime = "41"

# Crypto & security
ring = "0.17"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.10"
blake3 = { version = "1", default-features = false, features = ["std", "pure"] }

# P2P / mesh
libp2p = { version = "0.56", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "identify", "kad", "tokio", "macros"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
dialoguer = "0.12"
indicatif = "0.18"
console = "0.16"

# Time
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"

# WebSocket
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Misc
bytes = "1"
parking_lot = "0.12"
dashmap = "6"
once_cell = "1"
rust-embed = { version = "8", features = ["mime-guess"] }
url = { version = "2", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
regex = "1"
dirs = "6"
notify = "8"
tempfile = "3"
libc = "0.2"
qrcode = "0.14"

# Internal crates
claw-core = { path = "crates/claw-core" }
claw-config = { path = "crates/claw-config" }
claw-memory = { path = "crates/claw-memory" }
claw-llm = { path = "crates/claw-llm" }
claw-autonomy = { path = "crates/claw-autonomy" }
claw-plugin = { path = "crates/claw-plugin" }
claw-skills = { path = "crates/claw-skills" }
claw-channels = { path = "crates/claw-channels" }
claw-mesh = { path = "crates/claw-mesh" }
claw-runtime = { path = "crates/claw-runtime" }
claw-server = { path = "crates/claw-server" }
claw-device = { path = "crates/claw-device" }
claw-cli = { path = "crates/claw-cli" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
