[package]
name = "claw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for the Claw agent runtime"

[dependencies]
claw-core = { workspace = true }
claw-config = { workspace = true }
claw-runtime = { workspace = true }
claw-server = { workspace = true }
claw-llm = { workspace = true }
claw-channels = { workspace = true }
claw-plugin = { workspace = true }
claw-skills = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
qrcode = { workspace = true }
chrono = { workspace = true }

[features]
default = []
wasm = ["claw-plugin/wasm", "claw-runtime/wasm"]
