[package]
name = "claw-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration system for Claw (claw.toml)"

[dependencies]
claw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
