[package]
name = "claw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, traits, and error types for the Claw agent runtime"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
semver = { workspace = true }
