[package]
name = "claw-device"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Device control for Claw — browser automation (CDP), Android (ADB), and iOS (libimobiledevice)"

[dependencies]
claw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }
