[package]
name = "claw-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Peer-to-peer mesh networking for multi-device agent coordination"

[dependencies]
claw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

libp2p = { workspace = true }
