[package]
name = "claw-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM-based plugin host with capability-gated sandboxing"

[features]
default = []
wasm = ["wasmtime"]

[dependencies]
claw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true, optional = true }
semver = { workspace = true }
blake3 = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
