[package]
name = "claw-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The agent runtime — the core loop that connects LLM, tools, memory, autonomy, and channels"

[dependencies]
claw-core = { workspace = true }
claw-config = { workspace = true }
claw-llm = { workspace = true }
claw-memory = { workspace = true }
claw-autonomy = { workspace = true }
claw-plugin = { workspace = true }
claw-skills = { workspace = true }
claw-channels = { workspace = true }
claw-mesh = { workspace = true }
claw-device = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
libc = { workspace = true }
regex = { workspace = true }

[features]
default = []
wasm = ["claw-plugin/wasm"]
