[package]
name = "claw-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket API server for the Claw runtime"

[dependencies]
claw-core = { workspace = true }
claw-config = { workspace = true }
claw-runtime = { workspace = true }
claw-mesh = { workspace = true }
claw-skills = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
dirs = { workspace = true }
dashmap = { workspace = true }
rust-embed = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
claw-llm = { workspace = true }
http-body-util = "0.1"
