[package]
name = "claw-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Skills system — SKILL.md prompt-injected instructions for the LLM agent"

[dependencies]
claw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
