[package]
name = "text-utils"
version = "1.0.0"
edition = "2021"
description = "Text & data processing toolkit — Claw WASM plugin"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
regex = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
